--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@better-scroll/observe-dom": "^2.3.1",
+    "@better-scroll/pull-down": "^2.3.1",
+    "@better-scroll/pull-up": "^2.3.1",
     "axios": "^0.21.1",
+    "better-scroll": "^2.3.1",
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.11",
